Page Info Board - fix full width image not scaling on mobile device

--- a/wp-content/themes/zenit-theme/assets/styles/layouts/_single_product_board.scss
+++ b/wp-content/themes/zenit-theme/assets/styles/layouts/_single_product_board.scss
@@ -394,7 +394,6 @@
 
             &.image-fw {
                 .col-sm-12 {
-                    background-size: cover;
                     background-repeat: no-repeat;
                 }
             }
